p7_files/parser.output
Grammar

    0 $accept: program "end file"

    1 program: globals

    2 globals: globals decl
    3        | %empty

    4 decl: varDecl SEMICOLON
    5     | fnDecl

    6 varDecl: id COLON type

    7 type: INT
    8     | INT ARRAY LBRACE INTLITERAL RBRACE
    9     | BOOL
   10     | BOOL ARRAY LBRACE INTLITERAL RBRACE
   11     | BYTE
   12     | BYTE ARRAY LBRACE INTLITERAL RBRACE
   13     | STRING
   14     | VOID

   15 fnDecl: id COLON type formals fnBody

   16 formals: LPAREN RPAREN
   17        | LPAREN formalsList RPAREN

   18 formalsList: formalDecl
   19            | formalDecl COMMA formalsList

   20 formalDecl: id COLON type

   21 fnBody: LCURLY stmtList RCURLY

   22 stmtList: %empty
   23         | stmtList stmt

   24 stmt: varDecl SEMICOLON
   25     | assignExp SEMICOLON
   26     | lval DASHDASH SEMICOLON
   27     | lval CROSSCROSS SEMICOLON
   28     | READ lval SEMICOLON
   29     | WRITE exp SEMICOLON
   30     | IF LPAREN exp RPAREN LCURLY stmtList RCURLY
   31     | IF LPAREN exp RPAREN LCURLY stmtList RCURLY ELSE LCURLY stmtList RCURLY
   32     | WHILE LPAREN exp RPAREN LCURLY stmtList RCURLY
   33     | RETURN exp SEMICOLON
   34     | RETURN SEMICOLON
   35     | callExp SEMICOLON

   36 exp: assignExp
   37    | exp DASH exp
   38    | exp CROSS exp
   39    | exp STAR exp
   40    | exp SLASH exp
   41    | exp AND exp
   42    | exp OR exp
   43    | exp EQUALS exp
   44    | exp NOTEQUALS exp
   45    | exp GREATER exp
   46    | exp GREATEREQ exp
   47    | exp LESS exp
   48    | exp LESSEQ exp
   49    | NOT exp
   50    | DASH term
   51    | term

   52 assignExp: lval ASSIGN exp

   53 callExp: id LPAREN RPAREN
   54        | id LPAREN actualsList RPAREN

   55 actualsList: exp
   56            | actualsList COMMA exp

   57 term: lval
   58     | INTLITERAL
   59     | STRLITERAL
   60     | TRUE
   61     | FALSE
   62     | HAVOC
   63     | LPAREN exp RPAREN
   64     | callExp

   65 lval: id
   66     | id LBRACE exp RBRACE

   67 id: ID


Terminals, with rules where they appear

    "end file" (0) 0
    error (256)
    AND <transToken> (258) 41
    ARRAY <transToken> (259) 8 10 12
    ASSIGN <transToken> (260) 52
    BOOL <transToken> (261) 9 10
    BYTE <transToken> (262) 11 12
    COLON <transToken> (263) 6 15 20
    COMMA <transToken> (264) 19 56
    CROSS <transToken> (265) 38
    CROSSCROSS <transToken> (266) 27
    DASH <transToken> (267) 37 50
    DASHDASH <transToken> (268) 26
    ELSE <transToken> (269) 31
    EQUALS <transToken> (270) 43
    FALSE <transToken> (271) 61
    HAVOC <transToken> (272) 62
    ID <transIDToken> (273) 67
    IF <transToken> (274) 30 31
    INT <transToken> (275) 7 8
    INTLITERAL <transIntToken> (276) 8 10 12 58
    GREATER <transToken> (277) 45
    GREATEREQ <transToken> (278) 46
    LBRACE <transToken> (279) 8 10 12 66
    LCURLY <transToken> (280) 21 30 31 32
    LESS <transToken> (281) 47
    LESSEQ <transToken> (282) 48
    LPAREN <transToken> (283) 16 17 30 31 32 53 54 63
    NOT <transToken> (284) 49
    NOTEQUALS <transToken> (285) 44
    OR <transToken> (286) 42
    RBRACE <transToken> (287) 8 10 12 66
    RCURLY <transToken> (288) 21 30 31 32
    READ <transToken> (289) 28
    RETURN <transToken> (290) 33 34
    RPAREN <transToken> (291) 16 17 30 31 32 53 54 63
    SEMICOLON <transToken> (292) 4 24 25 26 27 28 29 33 34 35
    SLASH <transToken> (293) 40
    STRING <transToken> (294) 13
    STAR <transToken> (295) 39
    STRLITERAL <transStrToken> (296) 59
    TRUE <transToken> (297) 60
    VOID <transToken> (298) 14
    WHILE <transToken> (299) 32
    WRITE <transToken> (300) 29


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program <transProgram> (47)
        on left: 1
        on right: 0
    globals <transDeclList> (48)
        on left: 2 3
        on right: 1 2
    decl <transDecl> (49)
        on left: 4 5
        on right: 2
    varDecl <transVarDecl> (50)
        on left: 6
        on right: 4 24
    type <transType> (51)
        on left: 7 8 9 10 11 12 13 14
        on right: 6 15 20
    fnDecl <transFn> (52)
        on left: 15
        on right: 5
    formals <transFormals> (53)
        on left: 16 17
        on right: 15
    formalsList <transFormals> (54)
        on left: 18 19
        on right: 17 19
    formalDecl <transFormal> (55)
        on left: 20
        on right: 18 19
    fnBody <transStmts> (56)
        on left: 21
        on right: 15
    stmtList <transStmts> (57)
        on left: 22 23
        on right: 21 23 30 31 32
    stmt <transStmt> (58)
        on left: 24 25 26 27 28 29 30 31 32 33 34 35
        on right: 23
    exp <transExp> (59)
        on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
        on right: 29 30 31 32 33 37 38 39 40 41 42 43 44 45 46 47 48 49 52 55 56 63 66
    assignExp <transAssignExp> (60)
        on left: 52
        on right: 25 36
    callExp <transCallExp> (61)
        on left: 53 54
        on right: 35 64
    actualsList <transActuals> (62)
        on left: 55 56
        on right: 54 56
    term <transExp> (63)
        on left: 57 58 59 60 61 62 63 64
        on right: 50 51
    lval <transLVal> (64)
        on left: 65 66
        on right: 26 27 28 52 57
    id <transID> (65)
        on left: 67
        on right: 6 15 20 53 54 65 66


State 0

    0 $accept: • program "end file"

    $default  reduce using rule 3 (globals)

    program  go to state 1
    globals  go to state 2


State 1

    0 $accept: program • "end file"

    "end file"  shift, and go to state 3


State 2

    1 program: globals •
    2 globals: globals • decl

    ID  shift, and go to state 4

    $default  reduce using rule 1 (program)

    decl     go to state 5
    varDecl  go to state 6
    fnDecl   go to state 7
    id       go to state 8


State 3

    0 $accept: program "end file" •

    $default  accept


State 4

   67 id: ID •

    $default  reduce using rule 67 (id)


State 5

    2 globals: globals decl •

    $default  reduce using rule 2 (globals)


State 6

    4 decl: varDecl • SEMICOLON

    SEMICOLON  shift, and go to state 9


State 7

    5 decl: fnDecl •

    $default  reduce using rule 5 (decl)


State 8

    6 varDecl: id • COLON type
   15 fnDecl: id • COLON type formals fnBody

    COLON  shift, and go to state 10


State 9

    4 decl: varDecl SEMICOLON •

    $default  reduce using rule 4 (decl)


State 10

    6 varDecl: id COLON • type
   15 fnDecl: id COLON • type formals fnBody

    BOOL    shift, and go to state 11
    BYTE    shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14
    VOID    shift, and go to state 15

    type  go to state 16


State 11

    9 type: BOOL •
   10     | BOOL • ARRAY LBRACE INTLITERAL RBRACE

    ARRAY  shift, and go to state 17

    $default  reduce using rule 9 (type)


State 12

   11 type: BYTE •
   12     | BYTE • ARRAY LBRACE INTLITERAL RBRACE

    ARRAY  shift, and go to state 18

    $default  reduce using rule 11 (type)


State 13

    7 type: INT •
    8     | INT • ARRAY LBRACE INTLITERAL RBRACE

    ARRAY  shift, and go to state 19

    $default  reduce using rule 7 (type)


State 14

   13 type: STRING •

    $default  reduce using rule 13 (type)


State 15

   14 type: VOID •

    $default  reduce using rule 14 (type)


State 16

    6 varDecl: id COLON type •
   15 fnDecl: id COLON type • formals fnBody

    LPAREN  shift, and go to state 20

    $default  reduce using rule 6 (varDecl)

    formals  go to state 21


State 17

   10 type: BOOL ARRAY • LBRACE INTLITERAL RBRACE

    LBRACE  shift, and go to state 22


State 18

   12 type: BYTE ARRAY • LBRACE INTLITERAL RBRACE

    LBRACE  shift, and go to state 23


State 19

    8 type: INT ARRAY • LBRACE INTLITERAL RBRACE

    LBRACE  shift, and go to state 24


State 20

   16 formals: LPAREN • RPAREN
   17        | LPAREN • formalsList RPAREN

    ID      shift, and go to state 4
    RPAREN  shift, and go to state 25

    formalsList  go to state 26
    formalDecl   go to state 27
    id           go to state 28


State 21

   15 fnDecl: id COLON type formals • fnBody

    LCURLY  shift, and go to state 29

    fnBody  go to state 30


State 22

   10 type: BOOL ARRAY LBRACE • INTLITERAL RBRACE

    INTLITERAL  shift, and go to state 31


State 23

   12 type: BYTE ARRAY LBRACE • INTLITERAL RBRACE

    INTLITERAL  shift, and go to state 32


State 24

    8 type: INT ARRAY LBRACE • INTLITERAL RBRACE

    INTLITERAL  shift, and go to state 33


State 25

   16 formals: LPAREN RPAREN •

    $default  reduce using rule 16 (formals)


State 26

   17 formals: LPAREN formalsList • RPAREN

    RPAREN  shift, and go to state 34


State 27

   18 formalsList: formalDecl •
   19            | formalDecl • COMMA formalsList

    COMMA  shift, and go to state 35

    $default  reduce using rule 18 (formalsList)


State 28

   20 formalDecl: id • COLON type

    COLON  shift, and go to state 36


State 29

   21 fnBody: LCURLY • stmtList RCURLY

    $default  reduce using rule 22 (stmtList)

    stmtList  go to state 37


State 30

   15 fnDecl: id COLON type formals fnBody •

    $default  reduce using rule 15 (fnDecl)


State 31

   10 type: BOOL ARRAY LBRACE INTLITERAL • RBRACE

    RBRACE  shift, and go to state 38


State 32

   12 type: BYTE ARRAY LBRACE INTLITERAL • RBRACE

    RBRACE  shift, and go to state 39


State 33

    8 type: INT ARRAY LBRACE INTLITERAL • RBRACE

    RBRACE  shift, and go to state 40


State 34

   17 formals: LPAREN formalsList RPAREN •

    $default  reduce using rule 17 (formals)


State 35

   19 formalsList: formalDecl COMMA • formalsList

    ID  shift, and go to state 4

    formalsList  go to state 41
    formalDecl   go to state 27
    id           go to state 28


State 36

   20 formalDecl: id COLON • type

    BOOL    shift, and go to state 11
    BYTE    shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14
    VOID    shift, and go to state 15

    type  go to state 42


State 37

   21 fnBody: LCURLY stmtList • RCURLY
   23 stmtList: stmtList • stmt

    ID      shift, and go to state 4
    IF      shift, and go to state 43
    RCURLY  shift, and go to state 44
    READ    shift, and go to state 45
    RETURN  shift, and go to state 46
    WHILE   shift, and go to state 47
    WRITE   shift, and go to state 48

    varDecl    go to state 49
    stmt       go to state 50
    assignExp  go to state 51
    callExp    go to state 52
    lval       go to state 53
    id         go to state 54


State 38

   10 type: BOOL ARRAY LBRACE INTLITERAL RBRACE •

    $default  reduce using rule 10 (type)


State 39

   12 type: BYTE ARRAY LBRACE INTLITERAL RBRACE •

    $default  reduce using rule 12 (type)


State 40

    8 type: INT ARRAY LBRACE INTLITERAL RBRACE •

    $default  reduce using rule 8 (type)


State 41

   19 formalsList: formalDecl COMMA formalsList •

    $default  reduce using rule 19 (formalsList)


State 42

   20 formalDecl: id COLON type •

    $default  reduce using rule 20 (formalDecl)


State 43

   30 stmt: IF • LPAREN exp RPAREN LCURLY stmtList RCURLY
   31     | IF • LPAREN exp RPAREN LCURLY stmtList RCURLY ELSE LCURLY stmtList RCURLY

    LPAREN  shift, and go to state 55


State 44

   21 fnBody: LCURLY stmtList RCURLY •

    $default  reduce using rule 21 (fnBody)


State 45

   28 stmt: READ • lval SEMICOLON

    ID  shift, and go to state 4

    lval  go to state 56
    id    go to state 57


State 46

   33 stmt: RETURN • exp SEMICOLON
   34     | RETURN • SEMICOLON

    DASH        shift, and go to state 58
    FALSE       shift, and go to state 59
    HAVOC       shift, and go to state 60
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 61
    LPAREN      shift, and go to state 62
    NOT         shift, and go to state 63
    SEMICOLON   shift, and go to state 64
    STRLITERAL  shift, and go to state 65
    TRUE        shift, and go to state 66

    exp        go to state 67
    assignExp  go to state 68
    callExp    go to state 69
    term       go to state 70
    lval       go to state 71
    id         go to state 72


State 47

   32 stmt: WHILE • LPAREN exp RPAREN LCURLY stmtList RCURLY

    LPAREN  shift, and go to state 73


State 48

   29 stmt: WRITE • exp SEMICOLON

    DASH        shift, and go to state 58
    FALSE       shift, and go to state 59
    HAVOC       shift, and go to state 60
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 61
    LPAREN      shift, and go to state 62
    NOT         shift, and go to state 63
    STRLITERAL  shift, and go to state 65
    TRUE        shift, and go to state 66

    exp        go to state 74
    assignExp  go to state 68
    callExp    go to state 69
    term       go to state 70
    lval       go to state 71
    id         go to state 72


State 49

   24 stmt: varDecl • SEMICOLON

    SEMICOLON  shift, and go to state 75


State 50

   23 stmtList: stmtList stmt •

    $default  reduce using rule 23 (stmtList)


State 51

   25 stmt: assignExp • SEMICOLON

    SEMICOLON  shift, and go to state 76


State 52

   35 stmt: callExp • SEMICOLON

    SEMICOLON  shift, and go to state 77


State 53

   26 stmt: lval • DASHDASH SEMICOLON
   27     | lval • CROSSCROSS SEMICOLON
   52 assignExp: lval • ASSIGN exp

    ASSIGN      shift, and go to state 78
    CROSSCROSS  shift, and go to state 79
    DASHDASH    shift, and go to state 80


State 54

    6 varDecl: id • COLON type
   53 callExp: id • LPAREN RPAREN
   54        | id • LPAREN actualsList RPAREN
   65 lval: id •
   66     | id • LBRACE exp RBRACE

    COLON   shift, and go to state 81
    LBRACE  shift, and go to state 82
    LPAREN  shift, and go to state 83

    $default  reduce using rule 65 (lval)


State 55

   30 stmt: IF LPAREN • exp RPAREN LCURLY stmtList RCURLY
   31     | IF LPAREN • exp RPAREN LCURLY stmtList RCURLY ELSE LCURLY stmtList RCURLY

    DASH        shift, and go to state 58
    FALSE       shift, and go to state 59
    HAVOC       shift, and go to state 60
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 61
    LPAREN      shift, and go to state 62
    NOT         shift, and go to state 63
    STRLITERAL  shift, and go to state 65
    TRUE        shift, and go to state 66

    exp        go to state 84
    assignExp  go to state 68
    callExp    go to state 69
    term       go to state 70
    lval       go to state 71
    id         go to state 72


State 56

   28 stmt: READ lval • SEMICOLON

    SEMICOLON  shift, and go to state 85


State 57

   65 lval: id •
   66     | id • LBRACE exp RBRACE

    LBRACE  shift, and go to state 82

    $default  reduce using rule 65 (lval)


State 58

   50 exp: DASH • term

    FALSE       shift, and go to state 59
    HAVOC       shift, and go to state 60
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 61
    LPAREN      shift, and go to state 62
    STRLITERAL  shift, and go to state 65
    TRUE        shift, and go to state 66

    callExp  go to state 69
    term     go to state 86
    lval     go to state 87
    id       go to state 72


State 59

   61 term: FALSE •

    $default  reduce using rule 61 (term)


State 60

   62 term: HAVOC •

    $default  reduce using rule 62 (term)


State 61

   58 term: INTLITERAL •

    $default  reduce using rule 58 (term)


State 62

   63 term: LPAREN • exp RPAREN

    DASH        shift, and go to state 58
    FALSE       shift, and go to state 59
    HAVOC       shift, and go to state 60
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 61
    LPAREN      shift, and go to state 62
    NOT         shift, and go to state 63
    STRLITERAL  shift, and go to state 65
    TRUE        shift, and go to state 66

    exp        go to state 88
    assignExp  go to state 68
    callExp    go to state 69
    term       go to state 70
    lval       go to state 71
    id         go to state 72


State 63

   49 exp: NOT • exp

    DASH        shift, and go to state 58
    FALSE       shift, and go to state 59
    HAVOC       shift, and go to state 60
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 61
    LPAREN      shift, and go to state 62
    NOT         shift, and go to state 63
    STRLITERAL  shift, and go to state 65
    TRUE        shift, and go to state 66

    exp        go to state 89
    assignExp  go to state 68
    callExp    go to state 69
    term       go to state 70
    lval       go to state 71
    id         go to state 72


State 64

   34 stmt: RETURN SEMICOLON •

    $default  reduce using rule 34 (stmt)


State 65

   59 term: STRLITERAL •

    $default  reduce using rule 59 (term)


State 66

   60 term: TRUE •

    $default  reduce using rule 60 (term)


State 67

   33 stmt: RETURN exp • SEMICOLON
   37 exp: exp • DASH exp
   38    | exp • CROSS exp
   39    | exp • STAR exp
   40    | exp • SLASH exp
   41    | exp • AND exp
   42    | exp • OR exp
   43    | exp • EQUALS exp
   44    | exp • NOTEQUALS exp
   45    | exp • GREATER exp
   46    | exp • GREATEREQ exp
   47    | exp • LESS exp
   48    | exp • LESSEQ exp

    AND        shift, and go to state 90
    CROSS      shift, and go to state 91
    DASH       shift, and go to state 92
    EQUALS     shift, and go to state 93
    GREATER    shift, and go to state 94
    GREATEREQ  shift, and go to state 95
    LESS       shift, and go to state 96
    LESSEQ     shift, and go to state 97
    NOTEQUALS  shift, and go to state 98
    OR         shift, and go to state 99
    SEMICOLON  shift, and go to state 100
    SLASH      shift, and go to state 101
    STAR       shift, and go to state 102


State 68

   36 exp: assignExp •

    $default  reduce using rule 36 (exp)


State 69

   64 term: callExp •

    $default  reduce using rule 64 (term)


State 70

   51 exp: term •

    $default  reduce using rule 51 (exp)


State 71

   52 assignExp: lval • ASSIGN exp
   57 term: lval •

    ASSIGN  shift, and go to state 78

    $default  reduce using rule 57 (term)


State 72

   53 callExp: id • LPAREN RPAREN
   54        | id • LPAREN actualsList RPAREN
   65 lval: id •
   66     | id • LBRACE exp RBRACE

    LBRACE  shift, and go to state 82
    LPAREN  shift, and go to state 83

    $default  reduce using rule 65 (lval)


State 73

   32 stmt: WHILE LPAREN • exp RPAREN LCURLY stmtList RCURLY

    DASH        shift, and go to state 58
    FALSE       shift, and go to state 59
    HAVOC       shift, and go to state 60
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 61
    LPAREN      shift, and go to state 62
    NOT         shift, and go to state 63
    STRLITERAL  shift, and go to state 65
    TRUE        shift, and go to state 66

    exp        go to state 103
    assignExp  go to state 68
    callExp    go to state 69
    term       go to state 70
    lval       go to state 71
    id         go to state 72


State 74

   29 stmt: WRITE exp • SEMICOLON
   37 exp: exp • DASH exp
   38    | exp • CROSS exp
   39    | exp • STAR exp
   40    | exp • SLASH exp
   41    | exp • AND exp
   42    | exp • OR exp
   43    | exp • EQUALS exp
   44    | exp • NOTEQUALS exp
   45    | exp • GREATER exp
   46    | exp • GREATEREQ exp
   47    | exp • LESS exp
   48    | exp • LESSEQ exp

    AND        shift, and go to state 90
    CROSS      shift, and go to state 91
    DASH       shift, and go to state 92
    EQUALS     shift, and go to state 93
    GREATER    shift, and go to state 94
    GREATEREQ  shift, and go to state 95
    LESS       shift, and go to state 96
    LESSEQ     shift, and go to state 97
    NOTEQUALS  shift, and go to state 98
    OR         shift, and go to state 99
    SEMICOLON  shift, and go to state 104
    SLASH      shift, and go to state 101
    STAR       shift, and go to state 102


State 75

   24 stmt: varDecl SEMICOLON •

    $default  reduce using rule 24 (stmt)


State 76

   25 stmt: assignExp SEMICOLON •

    $default  reduce using rule 25 (stmt)


State 77

   35 stmt: callExp SEMICOLON •

    $default  reduce using rule 35 (stmt)


State 78

   52 assignExp: lval ASSIGN • exp

    DASH        shift, and go to state 58
    FALSE       shift, and go to state 59
    HAVOC       shift, and go to state 60
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 61
    LPAREN      shift, and go to state 62
    NOT         shift, and go to state 63
    STRLITERAL  shift, and go to state 65
    TRUE        shift, and go to state 66

    exp        go to state 105
    assignExp  go to state 68
    callExp    go to state 69
    term       go to state 70
    lval       go to state 71
    id         go to state 72


State 79

   27 stmt: lval CROSSCROSS • SEMICOLON

    SEMICOLON  shift, and go to state 106


State 80

   26 stmt: lval DASHDASH • SEMICOLON

    SEMICOLON  shift, and go to state 107


State 81

    6 varDecl: id COLON • type

    BOOL    shift, and go to state 11
    BYTE    shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14
    VOID    shift, and go to state 15

    type  go to state 108


State 82

   66 lval: id LBRACE • exp RBRACE

    DASH        shift, and go to state 58
    FALSE       shift, and go to state 59
    HAVOC       shift, and go to state 60
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 61
    LPAREN      shift, and go to state 62
    NOT         shift, and go to state 63
    STRLITERAL  shift, and go to state 65
    TRUE        shift, and go to state 66

    exp        go to state 109
    assignExp  go to state 68
    callExp    go to state 69
    term       go to state 70
    lval       go to state 71
    id         go to state 72


State 83

   53 callExp: id LPAREN • RPAREN
   54        | id LPAREN • actualsList RPAREN

    DASH        shift, and go to state 58
    FALSE       shift, and go to state 59
    HAVOC       shift, and go to state 60
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 61
    LPAREN      shift, and go to state 62
    NOT         shift, and go to state 63
    RPAREN      shift, and go to state 110
    STRLITERAL  shift, and go to state 65
    TRUE        shift, and go to state 66

    exp          go to state 111
    assignExp    go to state 68
    callExp      go to state 69
    actualsList  go to state 112
    term         go to state 70
    lval         go to state 71
    id           go to state 72


State 84

   30 stmt: IF LPAREN exp • RPAREN LCURLY stmtList RCURLY
   31     | IF LPAREN exp • RPAREN LCURLY stmtList RCURLY ELSE LCURLY stmtList RCURLY
   37 exp: exp • DASH exp
   38    | exp • CROSS exp
   39    | exp • STAR exp
   40    | exp • SLASH exp
   41    | exp • AND exp
   42    | exp • OR exp
   43    | exp • EQUALS exp
   44    | exp • NOTEQUALS exp
   45    | exp • GREATER exp
   46    | exp • GREATEREQ exp
   47    | exp • LESS exp
   48    | exp • LESSEQ exp

    AND        shift, and go to state 90
    CROSS      shift, and go to state 91
    DASH       shift, and go to state 92
    EQUALS     shift, and go to state 93
    GREATER    shift, and go to state 94
    GREATEREQ  shift, and go to state 95
    LESS       shift, and go to state 96
    LESSEQ     shift, and go to state 97
    NOTEQUALS  shift, and go to state 98
    OR         shift, and go to state 99
    RPAREN     shift, and go to state 113
    SLASH      shift, and go to state 101
    STAR       shift, and go to state 102


State 85

   28 stmt: READ lval SEMICOLON •

    $default  reduce using rule 28 (stmt)


State 86

   50 exp: DASH term •

    $default  reduce using rule 50 (exp)


State 87

   57 term: lval •

    $default  reduce using rule 57 (term)


State 88

   37 exp: exp • DASH exp
   38    | exp • CROSS exp
   39    | exp • STAR exp
   40    | exp • SLASH exp
   41    | exp • AND exp
   42    | exp • OR exp
   43    | exp • EQUALS exp
   44    | exp • NOTEQUALS exp
   45    | exp • GREATER exp
   46    | exp • GREATEREQ exp
   47    | exp • LESS exp
   48    | exp • LESSEQ exp
   63 term: LPAREN exp • RPAREN

    AND        shift, and go to state 90
    CROSS      shift, and go to state 91
    DASH       shift, and go to state 92
    EQUALS     shift, and go to state 93
    GREATER    shift, and go to state 94
    GREATEREQ  shift, and go to state 95
    LESS       shift, and go to state 96
    LESSEQ     shift, and go to state 97
    NOTEQUALS  shift, and go to state 98
    OR         shift, and go to state 99
    RPAREN     shift, and go to state 114
    SLASH      shift, and go to state 101
    STAR       shift, and go to state 102


State 89

   37 exp: exp • DASH exp
   38    | exp • CROSS exp
   39    | exp • STAR exp
   40    | exp • SLASH exp
   41    | exp • AND exp
   42    | exp • OR exp
   43    | exp • EQUALS exp
   44    | exp • NOTEQUALS exp
   45    | exp • GREATER exp
   46    | exp • GREATEREQ exp
   47    | exp • LESS exp
   48    | exp • LESSEQ exp
   49    | NOT exp •

    $default  reduce using rule 49 (exp)


State 90

   41 exp: exp AND • exp

    DASH        shift, and go to state 58
    FALSE       shift, and go to state 59
    HAVOC       shift, and go to state 60
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 61
    LPAREN      shift, and go to state 62
    NOT         shift, and go to state 63
    STRLITERAL  shift, and go to state 65
    TRUE        shift, and go to state 66

    exp        go to state 115
    assignExp  go to state 68
    callExp    go to state 69
    term       go to state 70
    lval       go to state 71
    id         go to state 72


State 91

   38 exp: exp CROSS • exp

    DASH        shift, and go to state 58
    FALSE       shift, and go to state 59
    HAVOC       shift, and go to state 60
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 61
    LPAREN      shift, and go to state 62
    NOT         shift, and go to state 63
    STRLITERAL  shift, and go to state 65
    TRUE        shift, and go to state 66

    exp        go to state 116
    assignExp  go to state 68
    callExp    go to state 69
    term       go to state 70
    lval       go to state 71
    id         go to state 72


State 92

   37 exp: exp DASH • exp
